Add voice interface with Whisper and web frontend
- Integrate Whisper.cpp for speech-to-text conversion
- Create voice-based calendar management API
- Add static web frontend for voice interactions
- Update Deno configuration to support voice features
- Modify README to include voice interface documentation
- Add setup script for Whisper.cpp installation
- Implement basic voice command parsing and execution

--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,10 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts",
-    "start": "deno run --allow-read --allow-write --allow-net --allow-run --allow-env main.ts",
+    "dev": "deno run --watch src/server/main.ts",
+    "start": "deno run --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi src/server/main.ts",
     "test": "deno test --allow-read --allow-write --allow-net",
-    "setup": "deno run --allow-read --allow-write scripts/setup.ts"
+    "setup": "deno run --allow-read --allow-write scripts/setup.ts",
+    "setup-whisper": "deno run --allow-read --allow-write --allow-run --allow-env scripts/setup-whisper.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert"
