--- a/deno.json
+++ b/deno.json
@@ -3,8 +3,9 @@
     "dev": "deno run --watch src/server/main.ts",
     "start": "deno run --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi src/server/main.ts",
     "test": "deno test --allow-read --allow-write --allow-net",
-    "setup": "deno run --allow-read --allow-write scripts/setup.ts",
-    "setup-whisper": "deno run --allow-read --allow-write --allow-run --allow-env scripts/setup-whisper.ts"
+    "setup-calendar": "deno run --allow-read --allow-write scripts/setup-calendar.ts",
+    "setup-whisper": "deno run --allow-read --allow-write --allow-run --allow-env scripts/setup-whisper.ts",
+    "setup": "deno run setup-calendar && deno run setup-whisper"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert"
