--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch src/server/main.ts",
-    "start": "deno run --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi src/server/main.ts",
+    "dev": "deno run --watch main.ts",
+    "start": "deno run --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi main.ts",
     "test": "deno test --allow-read --allow-write --allow-net",
     "setup-calendar": "deno run --allow-read --allow-write scripts/setup-calendar.ts",
     "setup-whisper": "deno run --allow-read --allow-write --allow-run --allow-env scripts/setup-whisper.ts",
