--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "tasks": {
     "dev": "deno run --watch main.ts",
     "start": "deno run --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi main.ts",
-    "test": "deno test --allow-read --allow-write --allow-net",
+    "test": "deno test --allow-read --allow-write --allow-net --allow-run --allow-env --allow-ffi",
     "setup-calendar": "deno run --allow-read --allow-write scripts/setup-calendar.ts",
     "setup-whisper": "deno run --allow-read --allow-write --allow-run --allow-env scripts/setup-whisper.ts",
     "setup": "deno run setup-calendar && deno run setup-whisper"
